--- a/src/index.html
+++ b/src/index.html
@@ -52,7 +52,7 @@
                 <a class="LEARNMore2">LEARN MORE</a>
             </div>
         </section>
-        <section class="info2 inactive">
+        <section class="info2 sectionProfessional inactive">
             <h1>Congratulations on your choice</h1>
             <h2 style="font-size: 3rem;">Professional</h2>
             <h2></h2>
