--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,10 @@
 </head>
 <body>
     <main>
+        <div id="NotifiContainer" class="notification inactive">
+        </div>
+        <img class="imgNoti inactive" src="./style/images/2645897.png" alt="">
+        <img class="imgNotic" src="./style/images/61073.png" alt="">
         <h1 class="oneP">Our Pricing</h1>
         <div class="containerSelelctor">
             <p>Annually</p>
@@ -84,7 +88,7 @@
         </section>
         </div>
     </main>
-
+    
     <script src="./index.js"></script>
 </body>
 </html>
